k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Exo-svc
spec:
  selector:
    app: Exo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
